--- a/index.html
+++ b/index.html
@@ -1,11 +1,153 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>New Page</title>
+	<title>Главная</title>
+	<link rel="stylesheet" href="div.css">
+	<link rel="stylesheet" href="animate.css">
+	<base target = "_blank">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="image/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="image/favicon.png" type="image/png">
 </head>
 <body>
-	<h1>Hello, world!</h1>
+<div class="wrapper">
+	<header>
+		<div class="textlogo">
+			<a href="tsm.html" target="_self"><div class="animate">
+			<h1 class="A">ТСМ</h1>
+  <h1 class="B">МТЮ</h1>
+		</div></a>
+		</div>
+        <a href="ticket.html" target="_self"><div class="buy">СПИСОК ГОРОДОВ | TOUR</div></a>
+		<div class="vk">
+			<a href="https://vk.com/pankman1_u"><img src="image/vk1.png" alt=""></a>
+			<a href="https://www.instagram.com/_pankman_/"><img src="image/inst.png" alt=""></a>
+		</div>
+	</header>
+
+	<div class="logo">
+		<div class="logophoto">
+			<img src="image/main.jpg" alt="">
+		</div>
+
+	
+	</div>
+<div class="clear"></div>
+    
+    <div class="music-box">
+    	ПОПУЛЯРНЫЕ ТРЕКИ
+    	<hr>
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Андер
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ - Андер.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Диот
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ - Диот.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Забыть
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ - забыть и снова вновь.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Мой путь
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ - Мой путь-Мой дом.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Неделимы
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ - Неделимы.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Пульс стабилен
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ - Пульс стабилен.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ feat. Trapgeek - Цепи
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ feat. Trapgeekstyle - Цепи.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ feat. TripD - Trap village
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ feat. TripleDep - Trap village.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Друзья
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ - Друзья.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+
+    	<div class="music">
+    		<img src="image/music.png" alt="">
+    		<div class="music-text">
+    			ТСМ МТЮ - Всего одна комната
+    		</div>
+    		<audio controls>
+    			<source src="music/ТСМ МТЮ prod. Allon Dark - Всего одна комната.mp3" type="audio/mpeg">
+    		</audio>
+    	</div>
+ 
+
+    </div>
+<div class="clear"></div>
+<div class="ticket">
+<a href="ticket.html" target="_self"><button>
+КУПИТЬ БИЛЕТ
+</button>
+</a>
+</div>	
+<div class="web"><div class="webtext"><a href="https://vk.com/id152914716">Разработка сайта</a></div></div>
+
+</div>
 </body>
 </html>
