--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<base target = "_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="image/favicon.png" type="image/png">
-    <link rel="shortcut icon" href="image/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 <body>
 <div class="wrapper">
@@ -21,13 +21,13 @@
         <a href="ticket.html" target="_self"><div class="buy">СПИСОК ГОРОДОВ | TOUR</div></a>
 		<div class="vk">
 			<a href="https://vk.com/pankman1_u"><img src="image/vk1.png" alt=""></a>
-			<a href="https://www.instagram.com/_pankman_/"><img src="image/inst.png" alt=""></a>
+			<a href="https://www.instagram.com/_pankman_/"><img src="inst.png" alt=""></a>
 		</div>
 	</header>
 
 	<div class="logo">
 		<div class="logophoto">
-			<img src="image/main.jpg" alt="">
+			<img src="main.jpg" alt="">
 		</div>
 
 	
@@ -38,7 +38,7 @@
     	ПОПУЛЯРНЫЕ ТРЕКИ
     	<hr>
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Андер
     		</div>
@@ -48,7 +48,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Диот
     		</div>
@@ -58,7 +58,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Забыть
     		</div>
@@ -68,7 +68,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Мой путь
     		</div>
@@ -78,7 +78,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Неделимы
     		</div>
@@ -88,7 +88,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Пульс стабилен
     		</div>
@@ -98,7 +98,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ feat. Trapgeek - Цепи
     		</div>
@@ -108,7 +108,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ feat. TripD - Trap village
     		</div>
@@ -118,7 +118,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Друзья
     		</div>
@@ -128,7 +128,7 @@
     	</div>
 
     	<div class="music">
-    		<img src="image/music.png" alt="">
+    		<img src="music.png" alt="">
     		<div class="music-text">
     			ТСМ МТЮ - Всего одна комната
     		</div>
