--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
         <a href="ticket.html" target="_self"><div class="buy">СПИСОК ГОРОДОВ | TOUR</div></a>
 		<div class="vk">
-			<a href="https://vk.com/pankman1_u"><img src="image/vk1.png" alt=""></a>
+			<a href="https://vk.com/pankman1_u"><img src="vk1.png" alt=""></a>
 			<a href="https://www.instagram.com/_pankman_/"><img src="inst.png" alt=""></a>
 		</div>
 	</header>
