--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="animate.css">
 	<base target = "_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="image/favicon.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 <body>
